# bayes-hdc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  ORIGINALITY.md  OUTREACH.md  QUIZ.md  README.md  SECURITY.md  SLIDES.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  docs.yml  publish.yml  release.yml  tests.yml
bayes_hdc/: __init__.py  _compat.py  anomaly.py  bayesian_models.py  constants.py  diagnostics.py  distributed.py  distributions.py  embeddings.py  equivariance.py  functional.py  inference.py  memory.py  metrics.py  models.py  plots.py  resonator.py  sklearn.py  structures.py  training.py  uncertainty.py  utils.py  vsa.py
bayes_hdc/datasets/: __init__.py  base.py  loaders.py
benchmarks/: README.md  benchmark_calibration.py  benchmark_calibration_results.json  benchmark_canonical.py  benchmark_canonical_hdc_tasks.py  benchmark_compare.py  benchmark_ood.py  benchmark_ood_results.json  benchmark_operations.py  benchmark_paper.py  benchmark_selective.py  benchmark_selective_results.json  benchmark_sequence_capacity.py  canonical_results.json  generate_figures.py  paper_results.json
docs/: LITERATURE_AUDIT.md  MLOSS_CHECKLIST.md  MLOSS_COVER_LETTER.md  anomaly.rst  api.rst  classification.rst  conf.py  contributing.rst  design.md  embeddings.rst  examples.rst  functional.rst  index.rst  installation.rst  main.tex  memory.rst  models.rst  quickstart.rst  references.bib  requirements.txt  tutorials.rst  utils.rst  vsa.rst  workshop_paper.tex
docs/_extra/: robots.txt
docs/audit/: 01-gayler-2003.md  02-fodor-pylyshyn-1988.md  03-smolensky-1990.md  04-plate-2003-hrr.md  05-kanerva-1997.md  06-hecht-nielsen-1994.md  07-kanerva-2009.md  08-stewart-eliasmith-2011.md  09-stewart-bekolay-eliasmith-2011.md  10-kanerva-2010.md  11-rasmussen-eliasmith-2011.md  12-gayler-levy-2009.md  13-levy-bajracharya-gayler-2013.md  14-jones-mewhort-2007.md  15-stewart-tang-eliasmith-2010.md  16-mizraji-1989.md  17-mizraji-1992.md  18-kleyko-2023.md
docs/marketing/: awesome-list-PRs.md
examples/: README.md  activity_recognition.py  anomaly_detection.py  anomaly_detection_intrusion.py  anomaly_detection_sensors.py  basic_operations.py  calibrated_regression.py  classification_simple.py  eeg_seizure_detection.py  emg_gesture_recognition.py  gayler_levy_analogy.py  hopfield_cleanup_hdc.py  image_classification.py  kanerva_example.py  language_identification.py  medical_selective_prediction.py  pvsa_quickstart.py  resonator_factorisation.py  sequence_memory.py  song_matching.py  variational_codebook_learning.py  vision_action_policy.py  weight_space_posterior.py
jax_hdc/: constants.py  embeddings.py  functional.py  memory.py  metrics.py  models.py  structures.py  utils.py  vsa.py
paper/: paper.bib  paper.md  paper_mloss.md
tests/: __init__.py  conftest.py  test_anomaly.py  test_bayesian_adaptive.py  test_bayesian_models.py  test_calibration_metrics.py  test_cross_api.py  test_datasets.py  test_dirichlet.py  test_distributions.py  test_embeddings.py  test_equivariance.py  test_functional.py  test_inference_and_distributed.py  test_integration.py  test_inverse_gaussian.py  test_math_properties.py  test_memory.py  test_metrics.py  test_mixture_and_derived.py  test_models.py  test_performance.py  test_plots.py  test_regression.py  test_sklearn.py  test_structures.py  test_systematicity.py  test_training.py  test_uncertainty.py  test_utils.py  test_v05_v06.py  test_vsa.py
tutorials/: 01_quickstart.ipynb  01_quickstart.py  02_anomaly_detection.py  03_sequences.py  README.md
