[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-hdc"
version = "0.4.0a0"
description = "Probabilistic hyperdimensional computing in JAX. Closed-form Gaussian and Dirichlet hypervectors, group-theoretic equivariance, calibrated probabilities, and coverage-guaranteed conformal prediction sets — pytree-native end-to-end."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rajdeep Singh", email = "rajdeeps@usc.edu"},
]
maintainers = [
    {name = "Rajdeep Singh", email = "rajdeeps@usc.edu"},
]
# Keywords are searchable on PyPI and indexed by some search engines.
# Front-load the discoverable terms; redundancy here is good.
keywords = [
    "hyperdimensional computing",
    "hyperdimensional-computing",
    "vector symbolic architectures",
    "vector-symbolic-architectures",
    "VSA",
    "HDC",
    "Bayesian hyperdimensional computing",
    "probabilistic vector symbolic architectures",
    "PVSA",
    "uncertainty quantification",
    "calibrated retrieval",
    "calibration",
    "conformal prediction",
    "temperature scaling",
    "Gaussian hypervectors",
    "Dirichlet hypervectors",
    "JAX",
    "jax",
    "pytree",
    "vmap",
    "pmap",
    "neuromorphic",
    "edge ML",
    "Bayesian machine learning",
    "probabilistic machine learning",
    "machine learning",
    "scientific computing",
    "Kanerva",
    "Plate",
    "Holographic Reduced Representations",
    "HRR",
    "BSC",
    "MAP",
    "associative memory",
    "Hopfield networks",
    "sparse distributed memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
examples = [
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]
datasets = [
    "scikit-learn>=1.0.0",
]
benchmark = [
    "torch>=2.0.0",
    "torch-hd>=5.0.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://rlogger.github.io/bayes-hdc/"
Documentation = "https://rlogger.github.io/bayes-hdc/"
Repository = "https://github.com/rlogger/bayes-hdc"
"Source Code" = "https://github.com/rlogger/bayes-hdc"
Issues = "https://github.com/rlogger/bayes-hdc/issues"
Discussions = "https://github.com/rlogger/bayes-hdc/discussions"
Changelog = "https://github.com/rlogger/bayes-hdc/blob/main/CHANGELOG.md"
"Design notes" = "https://github.com/rlogger/bayes-hdc/blob/main/DESIGN.md"
Benchmarks = "https://github.com/rlogger/bayes-hdc/blob/main/BENCHMARKS.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["bayes_hdc*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["bayes_hdc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=bayes_hdc --cov-report=term-missing"
markers = [
    "benchmark: performance benchmark tests (run with -m benchmark to execute)",
    "network: tests requiring network (OpenML, etc.); skipped by default, run with -m network",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
